fix: fixed whitespace on mobile devices side scrolling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,6 +49,11 @@
   --color-gize-dark: #333333;
 }
 
+html, body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
